--- a/app/src/main/res/layout/fouractivity.xml
+++ b/app/src/main/res/layout/fouractivity.xml
@@ -4,12 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/myViewpager"
+    <FrameLayout
+        android:id="@+id/fram1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
-        />
+        android:layout_weight="9"></FrameLayout>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#999999"/>
 
     <LinearLayout
         android:layout_width="match_parent"
