--- a/app/src/main/res/layout/userfragment.xml
+++ b/app/src/main/res/layout/userfragment.xml
@@ -1,11 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff">
 
-    <TextView
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/user_center_bg"/>
+
+    <ImageView
+        android:id="@+id/iv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="个人中心"/>
+        android:layout_marginTop="30dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/user_setting"/>
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/user_icon_no_set"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="89dp" />
+
+    <ImageView
+        android:id="@+id/iv_login"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/image1"
+        android:src="@drawable/login_btn_bg"/>
+
+    <LinearLayout
+        android:id="@+id/line4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/iv_login"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_pay"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/wait_pay"
+            android:gravity="center"
+            android:text="待付款"/>
+
+        <TextView
+            android:id="@+id/tv_send"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/wait_send_good"
+            android:gravity="center"
+            android:text="待发货"
+            />
+
+        <TextView
+            android:id="@+id/tv_receive"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/wait_receive_good"
+            android:gravity="center"
+            android:text="待收货"
+            />
+        <TextView
+            android:id="@+id/tv_evaluate"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/wait_evaluate"
+            android:gravity="center"
+            android:text="待评价"
+            />
+        <TextView
+            android:id="@+id/tv_refund"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/wait_refund"
+            android:gravity="center"
+            android:text="退款"
+            />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view1"
+        android:layout_below="@id/line4"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="1dp"
+        android:background="#696969"
+        />
+
+    <LinearLayout
+        android:id="@+id/line5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view1"
+        android:padding="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_order"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/my_order_icon"
+            android:gravity="center_vertical"
+            android:text="我的订单"/>
+
+        <TextView
+            android:id="@+id/tv_gift"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/my_invite_gift_icon"
+            android:gravity="center_vertical"
+            android:text="邀请有礼"/>
+
+        <TextView
+            android:id="@+id/tv_face"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/my_face_test_icon"
+            android:gravity="center_vertical"
+            android:text="刷脸测尺寸"/>
+
+        <TextView
+            android:id="@+id/tv_coupon"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/my_coupon_icon"
+            android:gravity="center_vertical"
+            android:text="我的现金券"/>
+
+        <TextView
+            android:id="@+id/tv_lottery"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/my_lottery_icon"
+            android:gravity="center_vertical"
+            android:text="我的抽奖单"/>
+
+        <TextView
+            android:id="@+id/tv_collection"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/my_collection_icon"
+            android:gravity="center_vertical"
+            android:text="我收藏的商品"/>
+
+        <TextView
+            android:id="@+id/tv_tel"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/personal_center_contact_service_icon"
+            android:gravity="center_vertical"
+            android:text="联系客服"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
